--- a/content/筆記.html
+++ b/content/筆記.html
@@ -61,8 +61,9 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='組員操作影片.html'>組員操作影片</a><ul><li><a href='筆記.html'>筆記</a><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>組員操作影片 << <a href='組員操作影片.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1<br /><h1>筆記</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='組員操作影片.html'>組員操作影片</a><ul><li><a href='筆記.html'>筆記</a><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>組員操作影片 << <a href='組員操作影片.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1<br /><h1>筆記</h1>
 <p><img src="./../images/S__66363394.jpg" width="451" height="338" alt=""></p>
 <p><img src="./../images/S__66363395.jpg" width="448" height="336" alt=""></p>
 <p><img src="./../images/S__66363396.jpg" width="447" height="335" alt=""></p>
+<p><img src="./../images/S__67846146.jpg" width="448" height="335" alt=""></p>
 <br />組員操作影片 << <a href='組員操作影片.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1</section></div></body></html>
